--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
   "devDependencies": {
     "eslint": "^8",
     "eslint-config-next": "14.2.28",
+    "eslint-config-prettier": "^10.1.5",
     "postcss": "^8",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^3.4.1"
   }
 }
